apps/media/playback/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin-prod-media-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - talos-uh1-bo3
      securityContext:
        fsGroup: 10000
        runAsGroup: 10000
        runAsNonRoot: true
        runAsUser: 10000
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
        - securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          image: docker.io/jellyfin/jellyfin
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
              gpu.intel.com/i915: "1"
            requests:
              cpu: 500m
              memory: 500Mi
              gpu.intel.com/i915: "1"
          volumeMounts:
            - name: app-data
              mountPath: /config
            - name: media
              mountPath: /media
            - name: home-ca-bundle
              mountPath: /etc/ssl/home-arpa
              readOnly: true
      volumes:
        - name: home-ca
          secret:
            secretName: home-arpa-tls
            items:
              - key: ca.crt
                path: ca.crt
        - name: home-ca-bundle
          emptyDir: {}
        - name: app-data
          persistentVolumeClaim:
            claimName: jellyfin-prod-media-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-share
