apps/media/playback/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-prod-media-svc
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: http
      name: http
      protocol: TCP
